# pg-typed-py

./: .editorconfig  README.md  compose.yml  init.sql  pyproject.toml
src/pg_typed_py/: __init__.py  generate_bindings.py
src/pg_typed_py/sample/: .gitignore  complex_queries.sql  get_users.sql  multi_queries.sql  test.py
