[project]
name = "pg-typed-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zac Oler", email = "zac.oler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.41",
]

[project.scripts]
pg-typed-py = "pg_typed_py:main"

[build-system]
requires = ["uv_build>=0.7.11,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
